# zspice

./: .gitignore  CMakeLists.txt  Doxyfile  readme  view
src/: ac.c  ac.h  analysis.h  circuit.c  circuit.h  component.c  component.h  dc.c  dc.h  error.c  error.h  lu.c  lu.def  lu.h  main.c  map.c  map.h  node.c  node.h  types.h
src/analysis/: ac.c  analysis.h  dc.c  dc_helper.c
src/component/: bjt.c  capacitor.c  cccs.c  ccvs.c  component.c  component.def  component.h  current_source.c  diode.c  inductor.c  resistor.c  resistor.h  vccs.c  vcvs.c  voltage_source.c  voltage_source.h
src/core/: circuit.c  circuit.h  environment.c  environment.h  node.h  sbuf.c  sbuf.h
src/io/: csv.c  csv.h
src/util/: error.c  error.h  lu.c  lu.def  lu.h  zmth.h
tests/: test.c  test.h  test_ac.c  test_capacitor.c  test_circuit.c  test_csv.c  test_current_source.c  test_dc.c  test_def.h  test_inductor.c  test_lu.c  test_map.c  test_node.c  test_resistor.c  test_voltage_source.c
